# Rust-learning-projects

./: README.md
elasticsearch/: .gitignore  elastic.js  index.html  mongo.js  package.json  server.js
learning-t/database-c/: Cargo.toml
login/: Cargo.toml
login-simple/: .env  Cargo.toml
login-simple/src/: db.rs  env.rs  main.rs
login-simple/src/handlers/: login.rs  register.rs
login-simple/src/models/: claims.rs  user.rs
login-simple/src/routes/: auth_routes.rs
login/src/: errors.rs  main.rs
login/src/db/: mod.rs
login/src/handlers/: auth_handler.rs
login/src/models/: user.rs
login/src/routes/: auth.rs
login/src/services/: auth_service.rs  token_service.rs
login/src/utils/: password.rs
note-v2/: Cargo.toml
note-v2/src/: app.rs  config.rs  error.rs  main.rs  states.rs
note-v2/src/config/: env.rs  mod.rs
notes-app/: .env  Cargo.toml
notes-app/src/: db.rs  env.rs  error.rs  main.rs  models.rs  routes.rs
notes-app/src/handlers/: notes.rs
notes-app/src/utils/: console.rs
todo-list/: .env  Cargo.toml
todo-list/src/: db.rs  env.rs  error.rs  main.rs  models.rs  routes.rs
todo-list/src/handlers/: todos.rs
todo-simple/: .env  .gitignore  Cargo.toml  README.md
todo-simple/src/: db.rs  env.rs  main.rs  state.rs
todo-simple/src/handlers/: create_todo.rs  delete_todo.rs  get_todo_by_id.rs  get_todos.rs  mod.rs  update_todo.rs
todo-simple/src/models/: todo.rs
todo-simple/src/routes/: todo_routes.rs
