[package]
name = "S-login"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mongodb = "2.8"
dotenvy = "0.15"

uuid = { version = "1", features = ["v4"] }
rand = "0.8"

argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

tower-http = { version = "0.5", features = ["cors"] }