[package]
name = "login"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

mongodb = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2 = "0.5"

uuid = { version = "1", features = ["v4"] }

dotenvy = "0.15"

tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

thiserror = "1"

chrono = { version = "0.4", features = ["serde"] }

rand = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures-util = "0.3"