[package]
name = "note-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
mongodb = "2.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
validator = { version = "0.16", features = ["derive"] }
