[package]
name = "note-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2.8"
bson = "2"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace"] }