[package]
name = "notes-app"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# MongoDB driver
mongodb = "2.8"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables (.env)
dotenvy = "0.15"

# Async utilities (for MongoDB cursor)
futures-util = "0.3"
futures = "0.3"
termcolor = "1"

# Redis 
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-redis = "0.13"

