[package]
name = "todo-list"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }

mongodb = "2.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"

futures-util = "0.3"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }

# validation
validator = { version = "0.18", features = ["derive"] }
