[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
mongodb = "2.8"
dotenvy = "0.15"
futures = "0.3"
